refactored for classreloading in new JVMs